<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:layout_margin="10dp"
    android:background="@color/cardview_light_background"
    android:baselineAligned="false">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:id="@+id/approvedBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/approved_by" />

    <TextView
        android:id="@+id/desc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desciption" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Amount" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:id="@+id/bill"/>
</LinearLayout>
</LinearLayout>

